# multiversa-installer

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
