[package]
name = "multiversa-installer"
version = "0.2.0"
description = "Instalador visual de MultiversaOS — capa sobre el CLI multiversa"
authors = ["Multiversa Group"]
license = "MIT"
repository = "https://github.com/moshequantum/multiversa-installer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
ureq = { version = "2.9", features = ["json"] }
base64 = "0.22"
